--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^1.1.5",
     "remark-gfm": "^1.0.0",
     "timeago-react": "^3.0.2",
     "web-vitals": "^1.0.1"
